--- a/package.json
+++ b/package.json
@@ -10,13 +10,18 @@
     "@types/node": "^12.0.0",
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
+    "@types/react-redux": "^7.1.20",
     "@types/react-router-dom": "^5.3.2",
+    "axios": "^0.24.0",
     "firebase": "^9.5.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-hot-toast": "^2.1.1",
+    "react-redux": "^7.2.6",
     "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
+    "redux": "^4.1.2",
+    "redux-thunk": "^2.4.0",
     "typescript": "^4.1.2"
   },
   "scripts": {
