--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@types/react-dom": "^17.0.0",
     "@types/react-redux": "^7.1.20",
     "@types/react-router-dom": "^5.3.2",
+    "@types/react-speech-recognition": "^3.6.1",
     "axios": "^0.24.0",
     "firebase": "^9.5.0",
     "react": "^17.0.2",
@@ -20,6 +21,7 @@
     "react-redux": "^7.2.6",
     "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
+    "react-speech-recognition": "^3.9.0",
     "redux": "^4.1.2",
     "redux-thunk": "^2.4.0",
     "typescript": "^4.1.2"
