--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@types/node": "^12.0.0",
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
+    "@types/react-modal": "^3.13.1",
     "@types/react-redux": "^7.1.20",
     "@types/react-router-dom": "^5.3.2",
     "@types/react-speech-recognition": "^3.6.1",
@@ -18,6 +19,7 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-hot-toast": "^2.1.1",
+    "react-modal": "^3.14.4",
     "react-redux": "^7.2.6",
     "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
