--- a/package.json
+++ b/package.json
@@ -14,8 +14,10 @@
     "@types/react-redux": "^7.1.20",
     "@types/react-router-dom": "^5.3.2",
     "@types/react-speech-recognition": "^3.6.1",
+    "@types/uuid": "^8.3.3",
     "axios": "^0.24.0",
     "firebase": "^9.5.0",
+    "moment": "^2.29.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-hot-toast": "^2.1.1",
@@ -26,7 +28,8 @@
     "react-speech-recognition": "^3.9.0",
     "redux": "^4.1.2",
     "redux-thunk": "^2.4.0",
-    "typescript": "^4.1.2"
+    "typescript": "^4.1.2",
+    "uuid": "^8.3.2"
   },
   "scripts": {
     "start": "react-scripts start",
