--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@types/react-redux": "^7.1.20",
     "@types/react-router-dom": "^5.3.2",
     "@types/react-speech-recognition": "^3.6.1",
+    "@types/redux-saga": "^0.10.5",
     "@types/uuid": "^8.3.3",
     "axios": "^0.24.0",
     "firebase": "^9.5.0",
@@ -27,6 +28,7 @@
     "react-scripts": "4.0.3",
     "react-speech-recognition": "^3.9.0",
     "redux": "^4.1.2",
+    "redux-saga": "^1.1.3",
     "redux-thunk": "^2.4.0",
     "typescript": "^4.1.2",
     "uuid": "^8.3.2"
@@ -56,8 +58,10 @@
     ]
   },
   "devDependencies": {
+    "@types/redux-logger": "^3.0.9",
     "eslint": "^7.32.0",
     "eslint-config-airbnb": "^18.2.1",
-    "eslint-plugin-react": "^7.27.1"
+    "eslint-plugin-react": "^7.27.1",
+    "redux-logger": "^3.0.6"
   }
 }
